# chanjet-openplatform-stream-rust

./: Cargo.toml  LICENSE  README.md
demo/: .env.example  Cargo.toml  README.md
demo/src/: main.rs
src/: client.rs  crypto.rs  dispatcher.rs  dlq.rs  lib.rs  protocol.rs
tests/: client_empty_credential_test.rs  client_test.rs
