[package]
name = "connector-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots", "connect", "handshake"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
aes = "0.8"
ecb = "0.1"
block-padding = "0.3"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
url = "2.5"
futures-util = "0.3"
hostname = "0.3"
tracing = "0.1"
