[package]
name = "connector-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["rustls-tls-native-roots", "connect", "handshake"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
aes = "0.8"
base64 = "0.22"
hex = "0.4"
hmac = "0.13"
sha2 = "0.11"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
url = "2.5"
futures-util = "0.3"
hostname = "0.4"
tracing = "0.1"
async-trait = "0.1.89"

